--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <h1 id="page_title">Project Portfolio</h1>
         <main id="projects-grid">
             <article id="project1" class="project_item">
-                <h2 class="project_number"><a href="0916home/index.html">Title test</a></h2>
-                <img class="project_image" src="image/p1.png" alt="project 1 image" width="125" height="125"/>
+                <h2 class="project_number"><a href="html text.html">project 1</a></h2>
+                <img class="project_image" src="image/p.png" alt="project 1 image" width="125" height="125"/>
                 <h3 class="project_title">My First Webpage using HTML</h3>
                 <p class="project_description">In this first project, I created a valid HTML5 webpage and formated text and images. </p>
             </article>
             <article id="project2" class="project_item">
-                <h2 class="project_number"><a href="">Title</a></h2>
-                <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 2 image" />
+                <h2 class="project_number"><a href="0916home/index.html">project 2</a></h2>
+                <img class="project_image" src="image/p1.png" alt="project 2 image" width="125" height="125"/>
                 <h3 class="project_title">Early Internet Art: Accessible Surfing</h3>
                 <p class="project_description">In this second project, I created a website inspired by Early Internet Art. </p>
             </article>
