--- a/1028profolio/index.html
+++ b/1028profolio/index.html
@@ -112,11 +112,11 @@
                 <b>Tiktok</b>
                 <p>user research internship,2023</p>
                 <br>
-                <b>ShanghaiSecuritiesNews</b>
-                <p>internjournalsit,2024</p>
+                <b>Shanghai Securities News</b>
+                <p>intern journalsit,2024</p>
                 <br>
-                <b>Westernsecurities</b>
-                <p>associateresearcherofmediaindustry，2024</p>
+                <b>Western securities</b>
+                <p>associate researcher of media industry，2024</p>
             </div>
         </div>
         <div>
@@ -124,8 +124,8 @@
             <div class="background_con_sm_title">Volunteer</div>
             <div class="background_con_line"></div>
             <div class="background_texts">
-                <p><b>WinterOlympicGamesinBeijing</b></p>
-                <p>mainmediacentervolunteer,2022</p>
+                <p><b>Winter Olympic Games in Beijing</b></p>
+                <p>main media center volunteer,2022</p>
 
             </div>
         </div>
@@ -159,7 +159,7 @@
     <div class="portfolio_con">
         <div class="portfolio_con_left">
             <div>
-                <div class="portfolio_con_left_title">My paper</div>
+                <div class="portfolio_con_left_title">My report</div>
                 <div class="line"></div>
             </div>
 
