--- a/profolio/index.html
+++ b/profolio/index.html
@@ -3,63 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Yiqing (Ella) Xu</title>
+    <title>Photography Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Navigation -->
+    <!-- 导航栏 -->
     <header>
         <nav>
-            <a href="#bio">Bio</a>
+            <a href="#home">Home</a>
             <a href="#portfolio">Portfolio</a>
-            <a href="#photography">Photography</a>
-            <a href="#blog">Blog</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <!-- Bio Section -->
-    <section id="bio">
-        <div class="bio-card">
-            <div class="bio-info">
-                <h1>Yiqing (Ella) Xu</h1>
-                <p>Love recording and imaging<br>Communication study<br>Warm and outgoing Taurus<br>estp</p>
-                <a href="https://www.instagram.com/walkwithdq/" target="_blank"> 
-                    <img src="ig_icon" alt="Instagram" class="icon">
-                </a>
-            </div>
-            <div class="bio-photo">
-                <img src="/Users/qingqing/Desktop/UNC/COMM/DDDDQ2023.github.io/profolio/picture/selfie.png" alt="Ella's Photo">
-            </div>
+    <!-- 首页介绍 -->
+    <section id="home">
+        <h1>Welcome to My Photography Portfolio</h1>
+        <p>A glimpse into my world through the lens.</p>
+    </section>
+
+    <!-- 作品展示 -->
+    <section id="portfolio">
+        <h2>My Photography Collection</h2>
+        <div class="gallery">
+            <img src="photo1.jpg" alt="Photo 1">
+            <img src="photo2.jpg" alt="Photo 2">
+            <img src="photo3.jpg" alt="Photo 3">
+            <!-- 更多图片... -->
         </div>
     </section>
 
-    <!-- Introduction Section -->
-    <section id="intro">
-        <div class="intro-text">
-            <h2>Hello, <span>I am Ella!</span></h2>
-            <p>I believe brevity is key. My print and digital designs are all about minimalism and elegance.</p>
-            <a href="#contact" class="hire-me">Hire me</a>
-        </div>
+    <!-- 关于我 -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I'm a photographer passionate about capturing the beauty of the world.</p>
     </section>
 
-    <!-- Design Focus Section -->
-    <section id="focus">
-        <h2>Design Focuses</h2>
-        <div class="focus-cards">
-            <div class="focus-card">
-                <h3>Print</h3>
-                <p>Further elaborate on the skill/offered service.</p>
-            </div>
-            <div class="focus-card">
-                <h3>Branding</h3>
-                <p>Further elaborate on the skill/offered service.</p>
-            </div>
-            <div class="focus-card">
-                <h3>Illustration</h3>
-                <p>Further elaborate on the skill/offered service.</p>
-            </div>
-        </div>
+    <!-- 联系信息 -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: example@example.com</p>
+        <p>Instagram: @yourusername</p>
     </section>
 
     <script src="script.js"></script>
