--- a/index.html
+++ b/index.html
@@ -21,38 +21,38 @@
         </header>
         <h1 id="page_title">Project Portfolio</h1>
         <main id="projects-grid">
-            <article id="project1" class="project_item">
+            <article id="html" class="project_item">
                 <h2 class="project_number"><a href="html text.html">project 1</a></h2>
                 <img class="project_image" src="image/p.png" alt="project 1 image" width="125" height="125"/>
                 <h3 class="project_title">My First Webpage using HTML</h3>
                 <p class="project_description">In this first project, I created a valid HTML5 webpage and formated text and images. </p>
             </article>
-            <article id="project2" class="project_item">
+            <article id="home" class="project_item">
                 <h2 class="project_number"><a href="0916home/index.html">project 2</a></h2>
                 <img class="project_image" src="image/p1.png" alt="project 2 image" width="125" height="125"/>
                 <h3 class="project_title">Early Internet Art: Accessible Surfing</h3>
                 <p class="project_description">In this second project, I created a website inspired by Early Internet Art. </p>
             </article>
-            <article id="project3" class="project_item">
+            <article id="layout" class="project_item">
                 <h2 class="project_number"><a href="layout/index.html">Title</a></h2>
                 <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 3 image" />
                 <h3 class="project_title">Laying out Layouts</h3>
                 <p class="project_description">In this third project, I built a responsive, educational website that reminded future me how to build a responsive website.</p>
             </article>
-            <article id="project4" class="project_item">
+            <article id="java" class="project_item">
                 <h2 class="project_number"><a href="java/index.html">Title</a></h2>
                 <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 4 image" />
                 <h3 class="project_title">JavaScript: Simple Task</h3>
                 <p class="project_description">In this fourth project, I used JavaScript to do a certain Task.</p>
             </article>
-            <article id="project5" class="project_item">
+            <article id="profolio" class="project_item">
                 <h2 class="project_number"><a href="1028profolio/index.html">Title</a></h2>
                 <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 5 image" />
                 <h3 class="project_title">Personal Website: To Brand or Not to Brand?</h3>
                 <p class="project_description">In this fifth project, I built a personal website that is pro-personal branding or anti-personal branding or ironic personal branding or anywhere in-between</p>
             </article>
-            <article id="project6" class="project_item">
-                <h2 class="project_number"><a href="improvement/index.html">Title</a></h2>
+            <article id="final" class="project_item">
+                <h2 class="project_number"><a href="final/index.html">Title</a></h2>
                 <img class="project_image" src="https://dummyimage.com/125x300/3d3d3d/9e9e9e" alt="project 6 image" />
                 <h3 class="project_title">Final Project: Re-Imagining the Internet</h3>
                 <p class="project_description">In the final project, I Incorporated all the skills I've learned in class to re-imagine a platform, site, or other interface of the internet.</p>
